# rbc

./: .gitignore  2023-08-31-14-05-55.bag  CMakeLists.txt  README.md  fix_permissions.sh  package.xml  robocock.code-workspace
.devcontainer/: .bashrc  Dockerfile  apt-get-wrapper.sh  convenience.sh  devcontainer.json  docker-compose.rpi.yml  docker-compose.yml  env_vars.sh  post_create.sh
.devcontainer/.ssh/: known_hosts
.devcontainer/convenience/: arduino_shortcuts.sh  catkin_shortcuts.sh  persistent_exports.sh  rbc_shortcuts.sh
.old/description/: robot_core.xacro
.old/launch/: launch_sim.launch.py
.old/robocock/config/: Setpoint velocity monitor.perspective  controller.yaml  controller_stress_test.perspective  gazebo_wheel_pid.yaml  motor_ros_control.perspective  motor_ros_control.rviz  motor_vel.perspective
.old/robocock/description/: inertial_macros.xacro  robot_core.xacro
.old/robocock/msg/: BaseAdaptiveState.msg  BaseParameters.msg  BaseState.msg  MotorState.msg
.old/robocock/scripts/: robodev.py
bot_host/: convenience.sh
bot_scripts/: env.sh  install.sh
circuits/: #auto_saved_files#  brain.kicad_sch  fp-lib-table  motor_controller.kicad_sch  motor_shields.kicad_sch  power_module.kicad_sch  rbc_circuits-B_Cu.gbr  rbc_circuits-B_Mask.gbr  rbc_circuits-B_Paste.gbr  rbc_circuits-B_Silkscreen.gbr  rbc_circuits-Edge_Cuts.gbr  rbc_circuits-F_Cu.gbr  rbc_circuits-F_Mask.gbr  rbc_circuits-F_Paste.gbr  rbc_circuits-F_Silkscreen.gbr  rbc_circuits-In1_Cu.gbr  rbc_circuits-In2_Cu.gbr  rbc_circuits-NPTH.drl  rbc_circuits-PTH.drl  rbc_circuits-job.gbrjob  rbc_circuits.kicad_pcb  rbc_circuits.kicad_pro  rbc_circuits.kicad_sch  utility.kicad_sch
circuits/PCBA files/: rbc BOM.xlsx
circuits/components/A000067/: ARDUINO_A000067.kicad_mod
controller/: .clangd  README.md  controller.ino  rbc.h  rbc_config.h
controller/old_src/ardupid/: ArduPID.cpp  ArduPID.h
controller/old_src/clients/: ros_serial_client.cpp  ros_serial_client.h
controller/old_src/motors/: encoder_naive.h  pid_motor.h  raw_motor.cpp
controller/old_src/utils/: derivative_constrainer.h
controller/src/: defs.h
controller/src/ardupid/: ArduPID.cpp  ArduPID.h
controller/src/batt/: Battery.cpp  Battery.h
controller/src/clients/: client.cpp  client.h  client2.cpp  client2.h  ros_serial_client.cpp  ros_serial_client.h
controller/src/motors/: communications_manager.h  encoder.cpp  encoder.h  encoder_naive.h  pid_motor.cpp  pid_motor.h
controller/src/pid/: RBCPID.h
controller/src/states/: motor_state.h  robot_state.h
controller/src/updaters/: communication.h  controller.h  encoder.h  free_spin_controller.h  motor.h  power_manager.h  raw_motor.h  robot_core.h
controller/src/utils/: Battery.cpp  argtypes.h  clock.cpp  exp_smoothener.h
controller/src2/: clock.h  controller.h  defs.h  exp_smoothener.h  ros_serial_client.h
controller/src2/states/: motor_state.h  robot_state.h
controller_src/: rbc.h  rbc_config.h
description/: colours.xacro
doc/: modify_hardware_comms.md
host_setup/: setup.sh
host_setup/astra/: 56-orbbec-usb.rules  astra_setup.sh
launch/: launch_sim.launch.py  robocock_visualization.rviz  rsp.launch.py  rviz.launch.py  rviz_gazebo.launch.py
ros/: README.md
ros/rbc_base/: CMakeLists.txt
ros/rbc_capture/: CMakeLists.txt  package.xml
ros/rbc_state_manager/: CMakeLists.txt  package.xml
ros/rbc_test/: CMakeLists.txt  package.xml
ros/robocock/: CMakeLists.txt  package.xml
ros/robocock/config/: controller.yaml  mapper_params_localization.yaml  model.perspective  motor_ros_control.perspective  motor_ros_control.rviz  motor_tune.perspective  wheel_debug.perspective
ros/robocock/description/: robot.urdf.xacro  robot_core.xacro
ros/robocock/launch/: bot_remote.launch  controller_stress_test.launch  full_remote.launch  gazebo.launch  hardware.launch  model.launch  motor_debug.launch  motor_ros_control.launch  motor_tune.launch  motor_vel.launch
ros/robocock/launch/hardware/: base_hardware.launch
ros/robocock/msg/: BaseSetpoint.msg  MotorParameters.msg  TargetWheelVelocities.msg  WheelAccumulatedI.msg  WheelPIDParameters.msg  WheelStates.msg
ros/robocock/scripts/: controller_stress_test.py  debug_topics.py  robodev.py  test.ipynb
ros/robocock/share/: Wheel Debug 1.perspective
ros/robocock/src/: basic_interface.cpp  basic_interface.h
ros/robocock/src/control/control_parameter_server/: control_parameter_server.h  main.cpp
ros/robocock/src/control/hardware/: main.cpp  robocock_hw.h
ros/robocock/src/control/hardware_parameter_server/: hardware_parameter_server.h
ros/robocock/src/control/omniwheel_base_controller/: holonomic_controller_helper.h  holonomic_kinematics.h  omniwheel_base_controller.cpp  omniwheel_base_controller_plugins.xml  omniwheel_inverse_kinematics.h  omniwheel_kinematics.h
src/cpp_hardware_interface_prototype/: BUILD.md  main.cpp
src/motor_pid_controller/: TODO.md
(+72 files in other folders)
