<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocock</name>
  <version>0.0.0</version>
  <description>Project Robocock is a versatile fully automated high-resolution interior photogrammetry solution.</description>
  <maintainer email="my_email@email.com">MY NAME</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Make sure Gazebo gets access to mesh folder by adding it to the export -->
    <!-- <gazebo_ros gazebo_model_path="${prefix}/share/robocock/meshes"/> -->
    <!-- <gazebo_ros gazebo_media_path="${prefix}/share/robocock/meshes"/> -->
    <!-- ${prefix} is replaced by the package's share directory in install -->
  </export>
</package>
